cluster/core/ingress-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: ingress-system
  labels:
    app.kubernetes.io/name: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  type: LoadBalancer
  loadBalancerIP: ${CONFIG_METALLB_INGRESS}
  externalTrafficPolicy: Local

---

apiVersion: v1
kind: Service
metadata:
  name: traefik-ping
  namespace: ingress-system
  labels:
    app.kubernetes.io/name: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: traefik
      protocol: TCP
      port: 9000
      targetPort: traefik

---

apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: ingress-system
  labels:
    app.kubernetes.io/name: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: traefik
      protocol: TCP
      port: 9100
      targetPort: metrics

---

apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: ingress-system
  labels:
    app.kubernetes.io/name: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - name: traefik
    protocol: TCP
    port: 80
    targetPort: 8080
